k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: http-server-deployment
  labels:
    app: http-server-deployment
spec:
  selector:
    matchLabels:
      app: http-server
  replicas: 10
  template:
    metadata:
      labels: 
        app: http-server
    spec:
      containers:
        - name: http-server
          image: "bwssoft/kubernetes-hello-world:v3"
