k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: http-server
  labels: 
    app: http-server
spec:
  containers:
    - name: http-server
      image: "bwssoft/kubernetes-hello-world:latest"
