k8s/node-port-service.yml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  selector:
    app: http-server
  type: NodePort
  ports:
  - name: http-server-port
    port: 9696
    targetPort: 8000
    protocol: TCP
    nodePort: 30001
