k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress
  labels:
    name: http-server-ingress
spec:
  rules:
  - host: ingress.btrace.app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-server-service
            port: 
              number: 9696
